<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/save_sound"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        >

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/ringtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringtone"
            android:theme="@style/checkBoxStyle"
            />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:theme="@style/checkBoxStyle"
            />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:theme="@style/checkBoxStyle"
            />


    </RadioGroup>

    <TextView
        android:id="@+id/authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ringtone_explain"
        />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/default_explain"
        android:theme="@style/checkBoxStyle"
        />

    <Button
        android:id="@+id/get_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_play"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ad_explain"
        android:textSize="12dp"
        />

</LinearLayout>